# scada_tools

./: .env.example  .gitignore  CHANGELOG.md  CONTEXT.md  DEVELOPER_GUIDE.md  FILES_CREATED.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE1_README.md  PLAN.md  QUICK_REFERENCE.md  README.md  REVIEW_FEEDBACK_APPLIED.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run.sh  test_phase1.py
app/: __init__.py  config.py  ignition_client.py  main.py  models.py
examples/: README.md  sample_tags.csv
specs/: 00_all_specs_combined.md  01_protocol_emulators.md  02_screen_building.md  03_alarm_generation.md  04_historian_setup.md  05_io_list_generation.md  06_tag_creation.md  07_grid_code_compliance.md  08_fat_sat_checklists.md  09_comms_troubleshooting.md  10_anomaly_detection.md  11_config_as_code.md  12_plc_emulation.md  README.md
tests/: __init__.py  conftest.py  test_config.py  test_models.py
